# PyNance-Webinterface

./: .dockerignore  .env.development  .env.production  .gitignore  .travis.yml  README.MD  docker-compose.yaml  dockerfile  listener.dockerfile  listener.py  requirements.txt  reset_docker.bat  run.py  test.py  webserver.dockerfile  webserver.py
backend/: __init__.py  cli.py  jinja.py
backend/config/: __init__.py  development.py  production.py  pynance-core.txt  system.py
backend/config/docker/: dashboard.dockerfile  database.dockerfile  entrypoint.sh  entrypoint_listener.sh  entrypoint_webserver.sh  listener.dockerfile  listener_req.txt  nginx.conf
backend/models/: balance.py  bot.py  chatterer.py  config.py  keys.py  orders.py  preference.py  settings.py  status.py  system.py
backend/plugins/PyNance/: .gitignore  .travis.yml  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.cfg
backend/plugins/PyNance/pynance/: __init__.py
backend/plugins/PyNance/pynance/_tests/: __init__.py  binance.py  orders.py  price.py  wallet.py
backend/plugins/PyNance/pynance/core/: __init__.py  exceptions.py  response.py
backend/plugins/PyNance/pynance/orders/: __init__.py
backend/plugins/PyNance/pynance/price/: __init__.py
backend/plugins/PyNance/pynance/wallet/: __init__.py
backend/utils/: auth.py
backend/utils/trading/: spot.py  (+2 more)
backend/views/: __init__.py
docs/: index.md
frontend/: .gitignore  README.md  package.json  vue.config.js
frontend/public/: browserconfig.xml  index.html  site.webmanifest
frontend/src/: App.vue  i18n.js  main.js  main.ts
(+376 files in other folders)
