[metadata]
# replace with your username:
name = PyNance
version = 0.0.1
author = 0x78f1935
author_email = -
description = PyNance is a Python library for Binance API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/0x78f1935/PyNance
keywords = one, two
license = Mozilla Public License Version 2.0
project_urls =
    Bug Tracker = https://github.com/0x78f1935/PyNance/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MPL2.0 License
    Operating System :: OS Independent

[options]
packages = find:
install_requires = requests
python_requires = >=3.7.3